# PoWBlockchain

./: .gitignore  README.md
pkg/BlockChainCore/: CMakeLists.txt  TODO  compile_commands.json  vcpkg.json
pkg/BlockChainCore/BlockChain_CXX_API/: BlockChain_api.cpp  BlockChain_api.h  CMakeLists.txt  api.cpp  api.h
pkg/BlockChainCore/BlockChain_C_API/: BlockChain_api.cpp  BlockChain_api.h  CMakeLists.txt
pkg/BlockChainCore/BlockChain_WASM_API/: CMakeLists.txt  LibWASM.cpp  LibWASM.hpp  main.cpp
pkg/BlockChainCore/benchmarks/: BenchLib.cpp  BenchLib.h  BlockBenchmarks.cpp  CMakeLists.txt  C_API_benchmark.cpp  CryptoBenchmarks.cpp  main.cpp
pkg/BlockChainCore/buildscripts/: build_release_clang_linux.sh  build_release_wasm.sh
pkg/BlockChainCore/docs/: Doxyfile
pkg/BlockChainCore/src/: CMakeLists.txt
pkg/BlockChainCore/src/Block/: Block.cpp  Block.h  BlockContainedData.cpp  BlockContainedData.h  BlockLogs.cpp  BlockLogs.h  CMakeLists.txt  Mining.cpp  Mining.h  TODO  mining_impl.h
pkg/BlockChainCore/src/Crypto/: CMakeLists.txt  Crypto.cpp  Crypto.h  CryptoLogs_ImportPubKey.cpp  CryptoLogs_ImportPubKey.h  KeysOptimized.cpp
pkg/BlockChainCore/src/Logger/: DefaultLoggers.h  ILogger.cpp
pkg/BlockChainCore/src/Predefs/: predefs.h
pkg/BlockChainCore/src/nested_error/: CMakeLists.txt  nested_error.cpp  nested_error.h
pkg/BlockChainCore/src/proto/: BlockExternal.proto  CMakeLists.txt
pkg/BlockChainCore/src/protobuf-3.21.12/: CMakeLists.txt
pkg/BlockChainCore/tests/: BlockTests.cpp  CApiTest.cpp  CMakeLists.txt  CXXApiTest.cpp  CryptoTests.cpp  main.cpp
pkg/NetVotingBackend/: CMakeLists.txt  main.cpp  vcpkg.json
pkg/NetVotingBackend/configs/: drogon.json
pkg/NetVotingBackend/src/: ABlockController.h  ABlockMandate.h  AControlChannel.h  ATransactionsContainer.h  BlockControllerLF.cpp  BlockControllerLF.h  BlockMandateLF.cpp  BlockMandateLF.h  ContolChannelSimple.h  ControlChannelSimple.cpp  Transaction.cpp  Transaction.h  TransactionsContainerImpl.cpp  TransactionsContainerImpl.h  main.cpp
pkg/NetVotingBackend/structure/: New Model.gaphor  swagger.yml
pkg/NetVotingBackend/tests/: CMakeLists.txt  main.cpp
pkg/voting_front/: package-lock.json  package.json
pkg/voting_front/src/: App.js  index.css  styles.css
pkg/voting_front/src/components/: Login.js  UserVoteDetails.js  Vote.js  VotersList.js  VotingDetails.js  VotingList.js
src/BlockChainCore/: Block.cpp  Block.h  BlockContainedData.cpp  CMakeLists.txt  ContainedData.cpp  ContainedData.h  Crypto.cpp  Crypto.h  FiniteField.cpp  FiniteField.h  ILogger.cpp  ILogger.h  predefs.h  vcpkg.json
src/BlockChainCore/Block/: Block.cpp  Block.h  BlockContainedData.h  BlockLogs.cpp  BlockLogs.h
src/BlockChainCore/Crypto/: Crypto.cpp
src/BlockChainCore/Logger/: DefaultLoggers.cpp  DefaultLoggers.h  ILogger.h
