cmake_minimum_required(VERSION 3.20)
project(BlockChainCoreProject)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
enable_testing()
find_program(CLANG_TIDY_EXE NAMS clang-tidy)
if(CLANG_TIDY_EXE)
    set(CMAKE_CXX_CLANG_TIDY ${CLANG_TIDY_EXE})
endif()
find_package(GTest CONFIG REQUIRED)
find_package(protobuf CONFIG REQUIRED)

#protobuf_generate_cpp(PROTO_SRCS PROTO_HDRS ./src/proto/BlockExternal.proto)
#add_library(BlockExternProto ${PROTO_SRCS} ${PROTO_HDRS})
find_package(benchmark CONFIG REQUIRED)
find_package(Boost REQUIRED COMPONENTS random)
find_package(cryptopp CONFIG REQUIRED)
find_package(tl-expected CONFIG REQUIRED)
find_package(fmt CONFIG REQUIRED)
add_subdirectory(src)
add_subdirectory(tests)
add_subdirectory(benchmarks)
