cmake_minimum_required(VERSION 3.20)
project(BlockChainCoreProject)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_POSITION_INDEPENDENT_CODE ON)
enable_testing()
find_program(CLANG_TIDY_EXE NAMS clang-tidy)
if(CLANG_TIDY_EXE)
    set(CMAKE_CXX_CLANG_TIDY ${CLANG_TIDY_EXE})
endif()
find_package(GTest CONFIG REQUIRED)

#protobuf_generate_cpp(PROTO_SRCS PROTO_HDRS ./src/proto/BlockExternal.proto)
#add_library(BlockExternProto ${PROTO_SRCS} ${PROTO_HDRS})
find_package(benchmark CONFIG REQUIRED)
find_package(cryptopp CONFIG REQUIRED)
find_package(tl-expected CONFIG REQUIRED)
find_package(fmt CONFIG REQUIRED)
add_subdirectory(./src/protobuf-3.21.12)
add_subdirectory(src)
add_subdirectory(BlockChain_CXX_API)
add_subdirectory(BlockChain_C_API)
add_subdirectory(tests)
add_subdirectory(benchmarks)
if(WASMBUILD)
    add_subdirectory(BlockChain_WASM_API)
endif(WASMBUILD)
