cmake_minimum_required(VERSION 3.20)
project(MyProject)
find_package(Drogon CONFIG REQUIRED)
find_package(Boost CONFIG REQUIRED)
find_package(LibCDS CONFIG REQUIRED)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_CXX_STANDARD 20)
file(GLOB_RECURSE backend_src "src/*.h" "src/*.cpp")
add_executable(NetVotingBackend ${backend_src})
# target_link_libraries(NetVotingBackend PRIVATE LibCDS::cds-s)
target_include_directories(NetVotingBackend PUBLIC ../BlockChainCore)
target_link_libraries(NetVotingBackend PUBLIC CXXAPILib)
target_link_libraries(NetVotingBackend PRIVATE Drogon::Drogon)
target_link_libraries(NetVotingBackend PUBLIC Boost::boost)

