cmake_minimum_required(VERSION 3.20)
project(BackendBlockchain)
find_package(Drogon CONFIG REQUIRED)
find_package(Boost CONFIG REQUIRED)
find_package(LibCDS CONFIG REQUIRED)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_CXX_STANDARD 20)
file(GLOB_RECURSE backend_src "src/*.h" "src/*.cpp")
file(GLOB_RECURSE tests_src "tests/*.h" "tests/*.cpp")
add_library(NetVotingBackend ${backend_src})
# target_include_directories(NetVotingBackend PUBLIC ../BlockChainCore)
# target_link_libraries(NetVotingBackend PUBLIC CXXAPILib)
target_link_libraries(NetVotingBackend PRIVATE Drogon::Drogon)
target_link_libraries(NetVotingBackend PUBLIC Boost::boost)
add_subdirectory(./tests)
