cmake_minimum_required(VERSION 3.20)
project(BlockchainCoreC_APIProject)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_CXX_STANDARD 20)
if(WASMBUILD)
  add_library(C_APILib ./BlockChain_api.h ./BlockChain_api.cpp)
else(WASMBUILD)
  add_library(C_APILib SHARED ./BlockChain_api.h ./BlockChain_api.cpp)
endif(WASMBUILD)
target_compile_options(C_APILib PRIVATE -O3)
target_include_directories(C_APILib PUBLIC ..)
target_link_libraries(C_APILib PRIVATE CXXAPILib)
