cmake_minimum_required(VERSION 3.20)
project(BenchmarksProject)
include_directories(../src)
link_directories(../src)
add_executable(Benchmarks main.cpp ./CryptoBenchmarks.cpp)
target_link_libraries(Benchmarks Crypto benchmark::benchmark benchmark::benchmark_main Boost::boost Boost::random fmt::fmt)
add_test(NAME BlockChainCoreBenchmarks COMMAND Benchmarks)
set_tests_properties(BlockChainCoreBenchmarks PROPERTIES DEPENDS BlockChainCoreTests)
