cmake_minimum_required(VERSION 3.20)
project(BenchmarksProject)
add_executable(Benchmarks main.cpp ./CryptoBenchmarks.cpp ./BlockBenchmarks.cpp)
target_include_directories(Benchmarks PUBLIC ../src)
target_link_libraries(Benchmarks Block Crypto benchmark::benchmark benchmark::benchmark_main fmt::fmt)
add_test(NAME BlockChainCoreBenchmarks COMMAND Benchmarks)
set_tests_properties(BlockChainCoreBenchmarks PROPERTIES DEPENDS BlockChainCoreTests)
