cmake_minimum_required(VERSION 3.20)
project(BenchmarksProject)
add_library(BenchmarksLib ./BenchLib.h ./BenchLib.cpp)
target_link_libraries(BenchmarksLib C_APILib Block Crypto benchmark::benchmark benchmark::benchmark_main fmt::fmt)
add_executable(Benchmarks main.cpp ./CryptoBenchmarks.cpp ./BlockBenchmarks.cpp ./C_API_benchmark.cpp)
# target_compile_options(Benchmarks PRIVATE -O0)
target_include_directories(Benchmarks PUBLIC ..)
target_link_libraries(Benchmarks BenchmarksLib C_APILib Block Crypto benchmark::benchmark benchmark::benchmark_main fmt::fmt)
add_test(NAME BlockChainCoreBenchmarks COMMAND Benchmarks)
set_tests_properties(BlockChainCoreBenchmarks PROPERTIES DEPENDS BlockChainCoreTests)
