cmake_minimum_required(VERSION 3.20)
project(TestsProject)
if(WASMBUILD)
  add_executable(Tests ./main.cpp ./CApiTest.cpp)
else(WASMBUILD)
  add_executable(Tests ./main.cpp ./CryptoTests.cpp ./BlockTests.cpp ./CXXApiTest.cpp ./CApiTest.cpp)
endif(WASMBUILD)
# target_compile_options(Tests PRIVATE -O0)
target_include_directories(Tests PUBLIC ../src)
target_include_directories(Tests PUBLIC ..)
target_link_libraries(Tests C_APILib CXXAPILib Crypto Block fmt::fmt GTest::gtest GTest::gtest_main GTest::gmock GTest::gmock_main)
add_test(NAME BlockChainCoreTests COMMAND Tests)

