cmake_minimum_required(VERSION 3.20)
project(BackendBlockchainTests)
# find_package(Drogon CONFIG REQUIRED)
# find_package(Boost CONFIG REQUIRED)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_CXX_STANDARD 20)
# file(GLOB_RECURSE backend_src "src/*.h" "src/*.cpp")
file(GLOB_RECURSE tests_src "./*.h" "./*.cpp")
add_executable(NetVotingBackendTests ${tests_src})
target_include_directories(NetVotingBackendTests PUBLIC ../src)
target_link_libraries(NetVotingBackendTests PUBLIC NetVotingBackend)
