cmake_minimum_required(VERSION 3.20)
project(BlockProject)
include_directories(../nested_error)
link_directories(../nested_error)
include_directories(../Proto)
link_directories(../Proto)
include_directories(../Crypto)
link_directories(../Crypto)
add_library(Block ./Block.h ./Block.cpp)
target_link_libraries(Block PUBLIC Boost::boost Boost::random fmt::fmt tl::expected protobuf::libprotobuf )
target_link_libraries(Block PUBLIC NestedError Crypto Proto)
