cmake_minimum_required(VERSION 3.20)
project(BlockProject)
add_library(Block ./Block.h ./Block.cpp ./mining_impl.h ./Mining.h ./Mining.cpp)
target_include_directories(Block PUBLIC ../proto)
target_include_directories(Block PUBLIC ../Crypto)
target_include_directories(Block PUBLIC ../nested_error)
target_link_libraries(Block PUBLIC fmt::fmt tl::expected protobuf::libprotobuf )
target_link_libraries(Block PUBLIC NestedError Crypto Proto)
